package modelo.obstaculos;

import modelo.jugadores.Jugador;

public class SinObstaculo extends Obstaculo {
    @Override
    public void interactuar(Jugador jugador) {

    }

}
